correcting the alignment

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,7 @@ html{
     color:black;
     max-width:500px;
     /* background-image: linear-gradient(to right, #00b09b, #96c93d); */
-    background-color:rgb(102, 255, 102);
+    background-color:whitesmoke;
     font-weight: 700;
     margin-bottom:10px;
     position:relative;
